[package]
name = "atomicmonitor"
version = "0.1.0"
authors = ["Phoenix <kahlo.phoenix@gmail.com>"]
description = "Effeciently await a condition on atomic data."
documentation = "https://raw.githubusercontent.com/gretchenfrage/atomic-monitor/master/README.md"
repository = "https://github.com/gretchenfrage/atomic-monitor"
categories = ["concurrency"]
license = "MIT"

[dependencies]
time = "0.1"
atomic = "0.4.1"
monitor = "0.1.0"

